# localreel

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/alembic/: env.py
src/alembic/versions/: 2026_07_19_17_32_40_fb4b45a1dc6d_add_videos_table.py  2026_07_21_22_17_36_eb14ab79e0c4_add_download_jobs_table.py
src/localreel/: containers.py  settings.py
src/localreel/adapters/: orm.py  repository.py  unit_of_work.py
src/localreel/domain/: commands.py  events.py  exceptions.py  messages.py  types.py
src/localreel/domain/abstractions/: repository.py  unit_of_work.py
src/localreel/domain/entities/: download_job.py
src/localreel/domain/models/: video.py
src/localreel/entrypoints/api/: main.py
src/localreel/entrypoints/api/routers/: health.py  videos.py
src/localreel/entrypoints/api/schemas/: videos.py
src/localreel/service_layer/: message_bus.py
src/localreel/service_layer/handlers/: commands.py  events.py
tests/factories/: video.py
tests/integration/: conftest.py
tests/integration/adapters/: test_repository.py  test_unit_of_work.py
tests/integration/entrypoints/api/: conftest.py
tests/integration/entrypoints/api/routers/: test_videos.py
tests/integration/service_layer/: test_commands.py
tests/integration/service_layer/handlers/: test_events.py
tests/unit/domain/: test_types.py  test_video.py
tests/unit/domain/models/: test_video.py
tests/unit/service_layer/: test_message_bus.py
