[project]
name = "localreel"
version = "0.1.0"
description = "Self-hosted short-form video platform"
requires-python = ">=3.14.5"
dependencies = [
    "dependency-injector",
    "fastapi",
    "uvicorn[standard]",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length (handled by ruff format)
]

[tool.mypy]
strict = true
files = ["src", "tests"]

# Tests are still checked, but don't require annotations everywhere
# (e.g. -> None on every test) and may call untyped libs like factory-boy.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "mypy>=2.3.0",
    "pre-commit>=4.0",
    "pytest>=9.1.1",
    "ruff>=0.9",
    "types-factory-boy>=0.4.1",
]
