[project]
name = "localreel"
version = "0.1.0"
description = "Self-hosted short-form video platform"
requires-python = ">=3.14.5"
dependencies = [
    "alembic>=1.18.5",
    "dependency-injector",
    "fastapi",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length (handled by ruff format)
]

[tool.ruff.lint.flake8-bugbear]
# Depends() in argument defaults is FastAPI's intended idiom, not the
# mutable-default bug B008 exists to catch.
extend-immutable-calls = ["fastapi.Depends"]

[tool.mypy]
strict = true
files = ["src", "tests"]

# Tests are still checked, but don't require annotations everywhere
# (e.g. -> None on every test) and may call untyped libs like factory-boy.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "httpx2>=2.7.0",
    "mypy>=2.3.0",
    "pre-commit>=4.0",
    "pytest>=9.1.1",
    "ruff>=0.9",
    "types-factory-boy>=0.4.1",
]


[tool.alembic]
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
script_location = "%(here)s/src/alembic"
file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d_%%(minute).2d_%%(second).2d_%%(rev)s_%%(slug)s"
prepend_sys_path = ["%(here)s/src"]
timezone = "UTC"

[[tool.alembic.post_write_hooks]]
name = "ruff_format"
type = "module"
module = "ruff"
options = "format REVISION_SCRIPT_FILENAME"

[[tool.alembic.post_write_hooks]]
name = "ruff_fix"
type = "module"
module = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"
